[tool.poetry]
name = "queuebot"
version = "0.1.0"
description = "A smart autoscaling queueing service for archivebot for eventual upload to the Internet Archive's Wayback Machine (WBM). Currently focusing on automatic archival of missing political and governmental twitter accounts. Live on efnet/#archivebot."
authors = ["InnovativeInventor <root@max.fan>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
mongoset = "^0.2.0"
uvicorn = "^0.11.5"
fastapi = "^0.59.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
